contrib/mlx/base/mlx-vs/mlx-ui-vs.yaml
# Copyright 2021 The MLX Contributors
#
# SPDX-License-Identifier: Apache-2.0
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mlx-ui
  namespace: kubeflow
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /
    rewrite:
      uri: /
    route:
    - destination:
        host: mlx-ui.kubeflow.svc.cluster.local
        port:
          number: 80
    timeout: 300s
